--- a/index.html
+++ b/index.html
@@ -21,12 +21,39 @@
       <h3>We're glad you're here :D</h3>
     </div>
     <hr/>
-    <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
+    <div id="staffGallery" >
+      <div class="card">
+        <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt="image of Eeyore upside down"/>
+        <h4><b>Upside-Down Eeyore</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Kanga-Egg.png" alt="image of Kangaroo with an egg"/>
+        <h4><b>Kange-Egg</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Owl-Music.png" alt="image of an owl with music notes"/>
+        <h4><b>Musical Owl</b></h4>
+      </div>
+      <div class="card">
+         <img class="galleryImage" src="./assets/Piglet-Cold.png" alt="image of Piglet wearing a scarf"/>
+         <h4><b>Cold Piglet</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Pooh-Jess.png" alt="image of Pooh holding a balloon" />
+        <h4><b>Pooh</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Rabbit-Carrot.png" alt="image of Rabbit with a carrot" />
+        <h4><b>Rabbit with a carrot</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Roo-Bee.png" alt="image of Roo with a bee" />
+        <h4><b>Roo with a bee</b></h4>
+      </div>
+      <div class="card">
+        <img class="galleryImage" src="./assets/Tigger-Jump.png" alt="image of Tigger jumping" />
+        <h4><b>Jumpy Tigger</b></h4>
+      </div>
     </div>
   </body>
-
 </html>
